[package]
name = "Blockchain-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.11.0-pre.3"
serde_json = "1.0.115"
hex = "0.4.3"
term = "0.7.0"
